 - Be more Python 3 compatible (not fully working with Python 3 yet, though).
 - apt/dpkg backend: Drop support for pre-0.7.9 python-apt API.

Bug fixes:
 - hookutils.py, attach_dmesg(): Do not overwrite already existing dmesg.
 - hookutils.py: Be more robust against file permission errors. (LP: #444678)
 - ui.py: Do not show all the options in --help when invoked as *-bug.
   (LP: #665953)

1.17.1 (2011-01-10)
-------------------
Bug fixes:
 - Make the GTK frontend work with GTK 2.0 as well, and drop "3.0" requirement.

1.17 (2010-12-31)
-----------------
Improvements:
 - Better standard bug titles for Python crashes. Thanks Matt Zimmerman!
   (LP: #681574)
 - Add handler for uncaught Java exceptions. There is no integration for
   automatically intercepting all Java crashes yet, see java/README.
   Thanks Matt Zimmerman! (LP: #548877)

Bug fixes:
 - GTK frontend: Require GTK 3.0.
 - launchpad.py: Default to "production" instance, not "edge", since edge is
   obsolete now.
 - hookutils.py, attach_alsa(): Fix crash if /proc/asound/cards does not exist.
   (LP: #626215)
 - ui.py, format_filesize(): Fix to work with stricter locale.format() in
   Python 2.7. (LP: #688535). While we are at it, also change it to use base-10
   units.
 - hookutils.py, package_versions(): Always include all requested package names
   even if they're unknown to us. Thanks Matt Zimmerman! (LP: #695188)
 - launchpad.py: When updating a bug, also add new tags. Thanks Brian Murray!

1.16 (2010-11-19)
-----------------
New features:
 - Port GTK frontend from pygtk2 to GTK+3.0 and gobject-introspection.

Bug fixes:
 - Fix symptoms again. Version 1.15 broke the default symptom directory.
 - Fix memory test case to work with current Python versions, where the SQLite
   integrity check throws a different exception.

1.15 (2010-11-11)
-----------------
New features:
 - Add dump_acpi_tables.py script. This can be called by package hooks which