@@ -12,6 +12,7 @@ Bug fixes:
  - hookutils.py: Be more robust against file permission errors. (LP: #444678)
  - ui.py: Do not show all the options in --help when invoked as *-bug.
    (LP: #665953)
+ - launchpad.py: Adapt test cases to current standard_title() behaviour.
 
 1.17.1 (2011-01-10)
 -------------------
